WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206824
Blob media loading does not work with GPUProcess
https://bugs.webkit.org/show_bug.cgi?id=206824
Summary
Blob media loading does not work with GPUProcess
youenn fablet
Reported
2020-01-27 07:18:48 PST
Blob media loading does not work with GPUProcess
Attachments
Patch
(21.00 KB, patch)
2020-01-28 04:48 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for relanding
(20.99 KB, patch)
2020-01-29 01:52 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-27 07:19:12 PST
<
rdar://problem/58917596
>
youenn fablet
Comment 2
2020-01-28 04:48:34 PST
Created
attachment 388981
[details]
Patch
WebKit Commit Bot
Comment 3
2020-01-28 06:54:34 PST
Comment on
attachment 388981
[details]
Patch Clearing flags on attachment: 388981 Committed
r255237
: <
https://trac.webkit.org/changeset/255237
>
WebKit Commit Bot
Comment 4
2020-01-28 06:54:35 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5
2020-01-28 09:57:39 PST
Re-opened since this is blocked by
bug 206889
youenn fablet
Comment 6
2020-01-28 09:58:29 PST
Breaking win build apparently:
https://build.webkit.org/builders/Apple%20Win%2010%20Release%20%28Build%29/builds/10234
C:\cygwin\worker\win10-release\build\Source\WebCore\platform\graphics\avfoundation\cf\InbandTextTrackPrivateLegacyAVCF.cpp(47,32): error C2664: 'WebCore::InbandTextTrackPrivateAVF::InbandTextTrackPrivateAVF(const WebCore::InbandTextTrackPrivateAVF &)': cannot convert argument 1 from 'WebCore::MediaPlayerPrivateAVFoundationCF *' to 'const WebCore::InbandTextTrackPrivateAVF &' [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\platform\graphics\avfoundation\cf\InbandTextTrackPrivateLegacyAVCF.cpp(49,1): message : Reason: cannot convert from 'WebCore::MediaPlayerPrivateAVFoundationCF *' to 'const WebCore::InbandTextTrackPrivateAVF' [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\platform\graphics\avfoundation\cf\InbandTextTrackPrivateLegacyAVCF.cpp(49,1): message : No constructor could take the source type, or constructor overload resolution was ambiguous [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] CookieStorageCFNet.cpp CredentialStorageCFNet.cpp DNSResolveQueueCFNet.cpp C:\cygwin\worker\win10-release\build\Source\WebCore\platform\graphics\avfoundation\InbandTextTrackPrivateAVF.h(113,1): message : see declaration of 'WebCore::InbandTextTrackPrivateAVF::InbandTextTrackPrivateAVF' (compiling source file C:\cygwin\worker\win10-release\build\Source\WebCore\platform\graphics\avfoundation\cf\InbandTextTrackPrivateLegacyAVCF.cpp) [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\page\CaptionUserPreferencesMediaAF.cpp(131,9): error C2065: 'MTEnableCaption2015BehaviorPtrType': undeclared identifier [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\page\CaptionUserPreferencesMediaAF.cpp(131,44): error C2146: syntax error: missing ';' before identifier 'function' [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\page\CaptionUserPreferencesMediaAF.cpp(131,44): error C2065: 'function': undeclared identifier [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\page\CaptionUserPreferencesMediaAF.cpp(131,55): error C3861: 'MTEnableCaption2015BehaviorPtr': identifier not found [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] FormDataStreamCFNet.cpp C:\cygwin\worker\win10-release\build\Source\WebCore\page\CaptionUserPreferencesMediaAF.cpp(132,14): error C2065: 'function': undeclared identifier [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] LoaderRunLoopCF.cpp NetworkStorageSessionCFNet.cpp NetworkStorageSessionCFNetWin.cpp ProtectionSpaceCFNet.cpp ProxyServerCFNet.cpp ResourceErrorCF.cpp ResourceHandleCFNet.cpp C:\cygwin\worker\win10-release\build\Source\WebCore\page\CaptionUserPreferencesMediaAF.cpp(132,27): error C3861: 'function': identifier not found [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\platform\graphics\avfoundation\cf\MediaPlayerPrivateAVFoundationCF.cpp(1531,48): error C2065: 'AVCFURLAssetInheritURIQueryComponentFromReferencingURIKey': undeclared identifier [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] ResourceHandleCFURLConnectionDelegate.cpp
youenn fablet
Comment 7
2020-01-29 01:46:20 PST
EWS win bot is fine and the files I modified in this patch are not compiled by Windows so this seems weird it causes a build issue.
youenn fablet
Comment 8
2020-01-29 01:50:10 PST
Bot was still failing to compile after the rollout for a few versions and then went green with
https://trac.webkit.org/changeset/255258/webkit
which is just a test expectation change.
https://build.webkit.org/builders/Apple%20Win%2010%20Release%20%28Build%29/builds/10237
for instance is failing with the same build errors. Let's try relanding it and see what bots think.
youenn fablet
Comment 9
2020-01-29 01:52:01 PST
Created
attachment 389114
[details]
Patch for relanding
WebKit Commit Bot
Comment 10
2020-01-29 02:35:33 PST
Comment on
attachment 389114
[details]
Patch for relanding Clearing flags on attachment: 389114 Committed
r255347
: <
https://trac.webkit.org/changeset/255347
>
WebKit Commit Bot
Comment 11
2020-01-29 02:35:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug