Blob media loading does not work with GPUProcess https://bugs.webkit.org/show_bug.cgi?id=206824 <rdar://problem/58917596>

Reviewed by Eric Carlson.

Source/WebCore:

GPU process is using WebCoreAVFResourceLoader for various loads, including blob loads.
In GPU process, loads will fail since this loader expects a CachedResource, which only WebProcess can have.
For that reason, move the CachedResource loader part of WebCoreAVFResourceLoader to a dedicated class CachedResourceMediaLoader.
If load cannot happen with a CachedResource, use a new class PlatformResourceMediaLoader, which uses a loader from MediaPlayer::createResourceLoader.
This allows using the loading path in GPUProcess used for HTTP loads, which works for blob loads as well.

Covered by existing and enabled tests.

* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.h:
* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
(WebCore::CachedResourceMediaLoader::~CachedResourceMediaLoader):
(WebCore::CachedResourceMediaLoader::create):
(WebCore::CachedResourceMediaLoader::CachedResourceMediaLoader):
(WebCore::CachedResourceMediaLoader::stop):
(WebCore::CachedResourceMediaLoader::responseReceived):
(WebCore::CachedResourceMediaLoader::notifyFinished):
(WebCore::CachedResourceMediaLoader::dataReceived):
(WebCore::PlatformResourceMediaLoader::~PlatformResourceMediaLoader):
(WebCore::PlatformResourceMediaLoader::create):
(WebCore::PlatformResourceMediaLoader::PlatformResourceMediaLoader):
(WebCore::PlatformResourceMediaLoader::stop):
(WebCore::PlatformResourceMediaLoader::responseReceived):
(WebCore::PlatformResourceMediaLoader::loadFailed):
(WebCore::PlatformResourceMediaLoader::loadFinished):
(WebCore::PlatformResourceMediaLoader::dataReceived):
(WebCore::WebCoreAVFResourceLoader::startLoading):
(WebCore::WebCoreAVFResourceLoader::stopLoading):
(WebCore::WebCoreAVFResourceLoader::responseReceived):
(WebCore::WebCoreAVFResourceLoader::loadFailed):
(WebCore::WebCoreAVFResourceLoader::loadFinished):
(WebCore::WebCoreAVFResourceLoader::newDataStoredInSharedBuffer):

LayoutTests:

* gpu-process/TestExpectations:


Canonical link: https://commits.webkit.org/219884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255237 268f45cc-cd09-0410-ab3c-d52691b4dbfc